tests/baselines/reference/typeParametersShouldNotBeEqual3.errors.txt
tests/cases/compiler/typeParametersShouldNotBeEqual3.ts(4,5): error TS2323: Type 'U' is not assignable to type 'T'.
tests/cases/compiler/typeParametersShouldNotBeEqual3.ts(5,5): error TS2323: Type 'Object' is not assignable to type 'T'.


==== tests/cases/compiler/typeParametersShouldNotBeEqual3.ts (2 errors) ====
    function ff<T extends Object, U extends Object>(x: T, y: U) {
        var z: Object;
        x = x;  // Ok
        x = y;  // Ok
        ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
        x = z;  // Ok
        ~
!!! error TS2323: Type 'Object' is not assignable to type 'T'.
        z = x;  // Ok
    }
    